full edited webpage

--- a/UserData/WebContent/register.html
+++ b/UserData/WebContent/register.html
@@ -25,13 +25,18 @@ function validate(){
 <body>
 
 <center>
-<div style="padding-top:350px"><form action="First" method="get">
-<h2>Login here</h2>
+
+<div style="padding-top:350px"><form action="register" method="get">
 <div style="background-color:aqua;width:500px">
+<h2>Register here</h2>
+
+Name:<input id="uname" type="text" placeholder=" name" name="name" required><br><br>
+
 username:<input id="uname" type="text" placeholder="username" name="user" required><br><br>
 password:<input id="pass" type="password" placeholder="password" name="pass" required>
 <br><br>
-<a href="ForgotPass.html">forgot password</a>
+Qualification:<input id="pass" type="Qualification" placeholder="Qualification" name="qual" required>
+<br><br>
 <input type="submit" >
 </div>
 </form>
